--- a/package.json
+++ b/package.json
@@ -1,28 +1,157 @@
 {
   "name": "projeto-vagas",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Projeto final +PraTi",
+  "main": "eslint.config.js",
+  "dependencies": {
+    "acorn": "^8.15.0",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^2.0.1",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.12",
+    "braces": "^3.0.3",
+    "browserslist": "^4.25.4",
+    "callsites": "^3.1.0",
+    "caniuse-lite": "^1.0.30001739",
+    "chalk": "^4.1.2",
+    "chownr": "^3.0.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^2.0.0",
+    "cross-spawn": "^7.0.6",
+    "csstype": "^3.1.3",
+    "debug": "^4.4.1",
+    "deep-is": "^0.1.4",
+    "detect-libc": "^1.0.3",
+    "electron-to-chromium": "^1.5.212",
+    "enhanced-resolve": "^5.18.3",
+    "esbuild": "^0.25.9",
+    "escalade": "^3.2.0",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-scope": "^8.4.0",
+    "eslint-visitor-keys": "^4.2.1",
+    "espree": "^10.4.0",
+    "esquery": "^1.6.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fdir": "^6.5.0",
+    "file-entry-cache": "^8.0.0",
+    "fill-range": "^7.1.1",
+    "find-up": "^5.0.0",
+    "flat-cache": "^4.0.1",
+    "flatted": "^3.3.3",
+    "fraction.js": "^4.3.7",
+    "gensync": "^1.0.0-beta.2",
+    "glob-parent": "^6.0.2",
+    "globals": "^16.3.0",
+    "graceful-fs": "^4.2.11",
+    "has-flag": "^4.0.0",
+    "ignore": "^5.3.2",
+    "import-fresh": "^3.3.1",
+    "imurmurhash": "^0.1.4",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "isexe": "^2.0.0",
+    "jiti": "^2.5.1",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "jsesc": "^3.1.0",
+    "json-buffer": "^3.0.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^2.2.3",
+    "keyv": "^4.5.4",
+    "levn": "^0.4.1",
+    "lightningcss": "^1.30.1",
+    "lightningcss-win32-x64-msvc": "^1.30.1",
+    "locate-path": "^6.0.0",
+    "lodash.merge": "^4.6.2",
+    "loose-envify": "^1.4.0",
+    "lru-cache": "^5.1.1",
+    "lucide-react": "^0.542.0",
+    "magic-string": "^0.30.18",
+    "micromatch": "^4.0.8",
+    "minimatch": "^3.1.2",
+    "minipass": "^7.1.2",
+    "minizlib": "^3.0.2",
+    "mkdirp": "^3.0.1",
+    "mri": "^1.2.0",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.11",
+    "natural-compare": "^1.4.0",
+    "node-addon-api": "^7.1.1",
+    "node-releases": "^2.0.19",
+    "normalize-range": "^0.1.2",
+    "optionator": "^0.9.4",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "parent-module": "^1.0.1",
+    "path-exists": "^4.0.0",
+    "path-key": "^3.1.1",
+    "picocolors": "^1.1.1",
+    "picomatch": "^4.0.3",
+    "postcss-value-parser": "^4.2.0",
+    "prelude-ls": "^1.2.1",
+    "punycode": "^2.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-refresh": "^0.17.0",
+    "react-router": "^6.30.1",
+    "react-router-dom": "^6.30.1",
+    "resolve-from": "^4.0.0",
+    "rollup": "^4.50.0",
+    "scheduler": "^0.23.2",
+    "semver": "^6.3.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "source-map-js": "^1.2.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "tapable": "^2.2.3",
+    "tar": "^7.4.3",
+    "tinyglobby": "^0.2.14",
+    "to-regex-range": "^5.0.1",
+    "type-check": "^0.4.0",
+    "update-browserslist-db": "^1.1.3",
+    "uri-js": "^4.4.1",
+    "vite": "^7.1.4",
+    "which": "^2.0.2",
+    "word-wrap": "^1.2.5",
+    "yallist": "^3.1.1",
+    "yocto-queue": "^0.1.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.3.2"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jonatas2024-git/Vagas.com.git"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jonatas2024-git/Vagas.com/issues"
+  },
+  "homepage": "https://github.com/jonatas2024-git/Vagas.com#readme"
 }
