--- a/vagas/src/main/resources/application.properties
+++ b/vagas/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=vagas
+
+# Configuração do banco de dados PostgreSQL
+# Tem que fazer alterasoes conforme o banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/seu_banco 
+spring.datasource.username=seu_usuario
+spring.datasource.password=sua_senha
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuração do JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
