--- a/vagas/src/main/resources/application.properties
+++ b/vagas/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=vagas
 
 # Configuração do banco de dados PostgreSQL
 # Tem que fazer alterasoes conforme o banco de dados
-spring.datasource.url=jdbc:postgresql://localhost:5432/seu_banco 
-spring.datasource.username=seu_usuario
-spring.datasource.password=sua_senha
+spring.datasource.url=jdbc:postgresql://aws-1-sa-east-1.pooler.supabase.com:5432/postgres?sslmode=require
+spring.datasource.username=postgres.yosgjqogwvnjteujaydi
+spring.datasource.password=Cr@qu&*5789$
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração do JPA/Hibernate
