implementações de segurança

--- a/vagas-backend/pom.xml
+++ b/vagas-backend/pom.xml
@@ -27,7 +27,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Segurança -->
+        <!-- SeguranÃ§a -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
